fee waiver changes

--- a/WebApp/Views/Account/DoctorLogin.cshtml
+++ b/WebApp/Views/Account/DoctorLogin.cshtml
@@ -1,11 +1,18 @@
 ﻿@model WebApp.Models.LoginRegisterViewModel
-
+<link href="~/Content/css/pnotify.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+<script src="~/Scripts/pnotify.js"></script>
 @{
     ViewBag.Title = "Log in";
     Layout = "~/Views/Shared/_AccountsLayout.cshtml";
     ViewBag.IsPatient = false;
 }
-
+<script>
+    @if (ViewBag.ModelError != null)
+{
+         @: new PNotify({ title: 'Error', text: '@ViewBag.ModelError', type: 'error', styling: 'bootstrap3' });
+    }
+</script>
 
 
 
@@ -24,16 +31,22 @@
                 @Html.AntiForgeryToken()
 
                 <h1>Login</h1>
-                <p>@ViewBag.SuccessMessage</p>
+                @*<p>@ViewBag.SuccessMessage</p>*@
                 <br />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
                 <div>
-                    @Html.TextBoxFor(m => m.LoginViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
                     @Html.ValidationMessageFor(m => m.LoginViewModel.Email, "", new { @class = "text-danger" })
                 </div>
                 <div>
-                    @Html.PasswordFor(m => m.LoginViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
+                    @Html.TextBoxFor(m => m.LoginViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
+                    
+                </div>
+                <div>
                     @Html.ValidationMessageFor(m => m.LoginViewModel.Password, "", new { @class = "text-danger" })
+                </div>
+                <div>
+                    @Html.PasswordFor(m => m.LoginViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
+                    
                 </div>
                 @*<div>
                     @Html.CheckBoxFor(m => m.LoginViewModel.RememberMe)
@@ -51,7 +64,7 @@
                 <div class="clearfix"></div>
                 <div class="separator">
                     <p class="change_link">
-                        <a href="#signup" class="to_register"> Create Account </a>
+                        <a href="#signup" class="to_register" onclick="resetvalidation()"> Create Account </a>
                     </p>
                     <div class="clearfix"></div>
                 </div>
@@ -69,20 +82,40 @@
             {
                 @Html.AntiForgeryToken()
                 <h1>Create Account</h1>
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-
+               
+                @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
+                <script>
+                      @if (ViewBag.error != null)
+                      {
+                        @: new PNotify({ title: 'Error', text: "@ViewBag.error", type: 'error', styling: 'bootstrap3' });
+                     }
+                </script>
+                <div>
+                    @Html.ValidationMessageFor(m => m.RegisterViewModel.FirstName, "", new { @class = "text-danger" })
+                </div>
                 <div>
                     @Html.TextBoxFor(m => m.RegisterViewModel.FirstName, new { @class = "form-control", @placeholder = "First Name" })
                 </div>
                 <div>
+                    @Html.ValidationMessageFor(m => m.RegisterViewModel.LastName, "", new { @class = "text-danger" })
+                </div>
+                <div>
                     @Html.TextBoxFor(m => m.RegisterViewModel.LastName, new { @class = "form-control", @placeholder = "Last Name" })
                 </div>
-
+                <div>
+                    @Html.ValidationMessageFor(m => m.RegisterViewModel.Email, "", new { @class = "text-danger" })
+                </div>
                 <div>
                     @Html.TextBoxFor(m => m.RegisterViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
                 </div>
                 <div>
+                    @Html.ValidationMessageFor(m => m.RegisterViewModel.Password, "", new { @class = "text-danger" })
+                </div>
+                <div>
                     @Html.PasswordFor(m => m.RegisterViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
+                </div>
+                <div>
+                    @Html.ValidationMessageFor(m => m.RegisterViewModel.ConfirmPassword, "", new { @class = "text-danger" })
                 </div>
                 <div>
                     @Html.PasswordFor(m => m.RegisterViewModel.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
@@ -98,7 +131,7 @@
                     <div class="clearfix"></div>
                     <div class="separator">
                         <p class="change_link">
-                            <a href="#signin" class="to_register"> Log in </a>
+                            <a href="#signin" class="to_register" onclick="resetvalidation()"> Log in </a>
                         </p>
                         <div class="clearfix"></div>
                     </div>
@@ -115,6 +148,12 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 <script language="javascript">
+    function resetvalidation()
+    {
+
+        $('.validation-summary-errors li').remove();
+        
+    }
     function chkChange() {
         if ($("#chkIsPatient").prop("checked")) {
             $("label[id$='lblIsPatient']").html("Register as a Patient");
