--- a/WebApp/Views/Appointment/DoctorProfileView.cshtml
+++ b/WebApp/Views/Appointment/DoctorProfileView.cshtml
@@ -50,7 +50,14 @@
                                             {
                                             <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
 
+                                                }
                                             }
+                                            else
+                                            {
+                                                for (var i = 0; i < 5; i++)
+                                                {
+                                                    <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+                                                }
                                             }
                                         </p>
                                         <p class="m-tb-15 text-center">
