--- a/WebApp/Views/Consultation/PartialDoctorReviews.cshtml
+++ b/WebApp/Views/Consultation/PartialDoctorReviews.cshtml
@@ -16,7 +16,7 @@
                         }
                         for (var i = 0; i < 5 - item.star; i++)
                         {
-                            <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+                            <a href=''><span class='fa fa-star-o'></span></a>
 
                         }
                     }
@@ -26,7 +26,7 @@
 
             </div>
             <div class="col-sm-12 text-center" style="margin-top: 20px;">
-                <textarea id="message" class="form-control" name="message" data-parsley-maxlength="1000"
+                <textarea style="margin-top:-27px;margin-bottom:18px" id="message" class="form-control" name="message" data-parsley-maxlength="1000"
                           data-parsley-validation-threshold="10" disabled>@item.reviewText</textarea>
             </div>
           }
