--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -43,11 +43,11 @@ else
                     <i class="fa fa-calendar" aria-hidden="true"></i>
 
                 </a>
-               <a href="javascript(void);"><i class="fa fa-star"></i></a>
-                <a href="javascript(void);"><i class="fa fa-star"></i></a>
-                <a href="javascript(void);"><i class="fa fa-star"></i></a>
-               <a href="javascript(void);"><i class="fa fa-star"></i></a>
-                <a href="javascript(void);"><i class="fa fa-star"></i></a>
+               <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-star"></i></a>
+               <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-star"></i></a>
                <i class="fa fa-phone clsNotMakePhone" aria-hidden="true"></i><a class="clsMakeCall" title="Call doctor @item.firstName @item.lastName" onclick=makeCallToDoctor(this) data-doctorid="@item.doctorID" style="display:none;" href="javascript:">
                     <i class="fa fa-phone" aria-hidden="true"></i>
                 </a>
